# print-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/api/: core.md
docs/developer-guide/: architecture.md  development.md
docs/user-guide/: cli-reference.md  installation.md  quickstart.md
examples/: README.md  booklet_workflow.py  business_cards.py
print_tools/: __init__.py  cli.py
print_tools/cli/: cli.py  concat.py  imposition.py  split.py  templating.py
print_tools/core/: concat.py  imposition.py  split.py  templating.py
print_tools/templating/: cli.py  templating.py
print_tools/utils/: embed.py  paper.py  parsing.py  utils.py
print_tools/utils/layouting/: algorithms.py  errors.py  helpers.py  models.py  other_algs.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli.py
tests/unit/: test_concat.py  test_parsing.py  test_templating.py  test_utils.py
